# carapace

./: 3  Cargo.toml
src/: builtin.rs  lib.rs  main.rs
src/builtin/: mod.rs
src/command/: mod.rs
src/jobs/: mod.rs
src/prompt/: mod.rs
src/signals/: mod.rs
src/test/: mysplit
test/: myint  myread  myspin  mystop
