[package]
name = "carapace"
version = "0.1.0"
authors = ["David McDonald <davidmcdonald@Davids-MacBook-Pro.local>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "*"
dirs = "2.0.2"
signal-hook = "0.1.16"
libc = "0.2"
tokio = { version = "0.2", features = [ "full" ] }
tokio-signal = "0.2"
futures = "0.3"
